--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <title>Disney Plus</title>
 </head>
 <body>
     
+    <div class="background-fixed"></div>
+    <div class="wrapper">
+        <header class="header">
+            <div class="logo">
+                <a class="logo__link" href="/"></a>
+            </div>
+        </header>
+        
+    </div>
 </body>
 </html>
